navbar and responsive navbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
 </head>
 
 <body>
-	<div class="conainer"></div>
+	<section class="main-screen">
+		<nav>
+			<h1 id="logo" class="logo">LOGO</h1>
+			<div class="menu__container">
+				<ul class="nav__menu" id="nav__menu" class="menu--1">
+					<li class="nav-links"><a href="#">HOME</a></li>
+					<li class="nav-links"><a href="#">WORK</a></li>
+					<li class="nav-links"><a href="#">CONTACT</a></li>
+					<li class="nav-links"><a href="#">ABOUT ME</a></li>
+				</ul>
+				<ul class="nav__menu menu--2">
+					<li class="nav-links"><a href="#">SIGN UP</a></li>
+					<li class="nav-links"><a href="#">LOGIN</a></li>
+				</ul>
+			</div>
+			<div class="menu-toggle" id="mobile-menu">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</div>
+		</nav>
+	</section>
 	<script src="src/js/app.js"></script>
 </body>
 
