--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
 				<span class="bar"></span>
 			</div>
 		</nav>
+		<div class="call-to-action">
+			<h1 class="h1 cta--title">Play Traditional Game</h1>
+			<h3 class="h3 cta--description"> Experience new traditional game play</h3>
+			<button class="btn btn__primary btn--cta">
+				Play Now
+			</button>
+			<div class="scroll-down-button">
+				<p class="p__story">THE STORY</p>
+				<img src="./src/img/scroll-down.svg" alt="" class="scroll__down--img">
+			</div>
+		</div>
+
+
 	</section>
 	<script src="src/js/app.js"></script>
 </body>
