add smooth scroll

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 				Play Now
 			</button>
 			<div class="scroll-down-button">
-				<p class="p__story">THE STORY</p>
-				<img src="./src/img/scroll-down.svg" alt="" class="scroll__down--img">
+				<p class="p__story"><a href="#about" class="btn--story">THE STORY</a></p>
+				<a href="#about"><img src="./src/img/scroll-down.svg" alt="" class="scroll__down--img"></a>
 			</div>
 		</div>
-
+	</section>
+	<section class="about__gallery" id="about">
 
 	</section>
 	<script src="src/js/app.js"></script>
