--- a/index.html
+++ b/index.html
@@ -89,6 +89,35 @@
 				</div>
 			</div>
 	</section>
+	<section class=" game-features">
+		<div class="game__features--container">
+
+			<h3 class="h3">What's so special?</h3>
+			<h1 class="h1">Features</h1>
+			<div class="container__list--features">
+				<div class="progress"></div>
+				<div class="list-progress">
+					<div class="circle active"></div>
+					<div class="list--text">
+						<h3 class="h3 h3__list">Traditional Games</h3>
+						<p>If you miss your childhood, we provide many traditional games here</p>
+					</div>
+				</div>
+				<div class="list-progress">
+					<div class="circle "></div>
+					<div class="list--text">
+						<h3 class="h3 h3__list">Game Suit</h3>
+					</div>
+				</div>
+				<div class="list-progress">
+					<div class="circle "></div>
+					<div class="list--text">
+						<h3 class="h3 h3__list">TBD</h3>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
 	</script>
